--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,6 +31,9 @@ jobs:
     - name: Setup Gradle 
       uses: gradle/actions/setup-gradle@v4 # v4.0.0
 
+    - name: Change wrapper permissions
+      run: chmod +x ./gradlew 
+
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
